Add Country entity and update Hotel relationships.

--- a/HotelListing.API/appsettings.Development.json
+++ b/HotelListing.API/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        // this is added if you have a fully installed instance running on your machine or the docker instance
+        //      "HotelListDbConnectionString" : "Server=localhost, 1400;Database=HotelListingDb;User Id=val;Password=MSSQL_SA_PASSWORD;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=false"
+        "HotelListingDbConnectionString": "Server=(localdb)\\ProjectModels;Database=HotelListingDb;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=false"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     }
-  }
 }
