--- a/HotelListing.API/appsettings.Development.json
+++ b/HotelListing.API/appsettings.Development.json
@@ -4,10 +4,26 @@
         //      "HotelListDbConnectionString" : "Server=localhost, 1400;Database=HotelListingDb;User Id=val;Password=MSSQL_SA_PASSWORD;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=false"
         "HotelListingDbConnectionString": "Server=(localdb)\\ProjectModels;Database=HotelListingDb;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=false"
     },
-    "Logging": {
-        "LogLevel": {
+    "Serilog": {
+        "MinimumLevel": {
             "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+            "Override": {
+                "Microsoft": "Warning",
+                "Microsoft.Hosting.Lifetime": "Information"
+            }
+        },
+        "WriteTo": [
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "./logs/log-.txt",
+                    "rollingInterval": "Day"
+                }
+            },
+            {
+                "Name": "Seq",
+                "Args": { "serverUrl":  "http://localhost:5341" }
+            }
+        ]
     }
 }
